# darkbrown

./: README.md  download  license.txt  pyproject.toml  support.js
darkbrown/: __init__.py  auth.py  hooks.py  modules.txt  pyproject.toml
darkbrown/api/: md_dashboard.py
darkbrown/darkbrown/page/md_dashboard/: md_dashboard.html  md_dashboard.js  md_dashboard.json  md_dashboard.py
darkbrown/public/css/: darkbrown_login.css  login.css
darkbrown/public/js/: darkbrown_login.js  login.js
darkbrown/templates/pages/: login.html
darkbrown/www/managing_director_dashboard/: index.html  index.py
