[project]
name = "darkbrown"
authors = [
    { name = "DarkBrown RealEstate", email = "admin@darkbrown.qa" }
]
description = "Dark Brown Real Estate — MD dashboard and custom tooling"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
